# hwhelper-ai

./: README.md  api.py  gunicorn_config.py  pyproject.toml  requirements.txt
src/smart_homework_learning_assistant/: crew.py  main.py
src/smart_homework_learning_assistant/config/: agents.yaml  tasks.yaml
