[project]
name = "smart_homework_learning_assistant"
version = "0.1.0"
description = "smart_homework_learning_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
smart_homework_learning_assistant = "smart_homework_learning_assistant.main:run"
run_crew = "smart_homework_learning_assistant.main:run"
train = "smart_homework_learning_assistant.main:train"
replay = "smart_homework_learning_assistant.main:replay"
test = "smart_homework_learning_assistant.main:test"
run_with_trigger = "smart_homework_learning_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
